[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/license_dialog/license_dialog.gd" type="Script" id=1]

[node name="LicenseDialog" type="AcceptDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -392.5
margin_top = -228.5
margin_right = 392.5
margin_bottom = 228.5
window_title = "Licenses"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgramLicense" type="Panel" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="LicenseText" type="RichTextLabel" parent="TabContainer/ProgramLicense"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
text = "MIT License

Copyright (c) 2020 Jummit

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirdPartyLicenses" type="Panel" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/ThirdPartyLicenses"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComponentTree" type="Tree" parent="TabContainer/ThirdPartyLicenses/HBoxContainer"]
margin_right = 209.0
margin_bottom = 377.0
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="InfoTextLabel" type="RichTextLabel" parent="TabContainer/ThirdPartyLicenses/HBoxContainer"]
margin_left = 213.0
margin_right = 761.0
margin_bottom = 377.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.61
selection_enabled = true

[connection signal="item_selected" from="TabContainer/ThirdPartyLicenses/HBoxContainer/ComponentTree" to="." method="_on_ComponentTree_item_selected"]
